--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="contact-item">
           <a rel="nofollow" href="mailto:marko.maras710@gmail.com" class="item-link">
             <i class="far fa-2x fa-envelope mr-4"></i>
-            <span class="mb-0" id="contactEmail"><b>Email:</b> adriastay@gmail.com</span>
+            <span class="mb-0" id="contactEmail"><b>Email:</b> adriastay7@gmail.com</span>
           </a>
         </div>
         <div class="contact-item">
@@ -423,7 +423,7 @@ function toggleFlags() {
         contactTitle: "<b>Kontakt</b>",
         contactText: "Za bilo kakva pitanja kontaktirajte nas putem mobitela, email-a ili nas posjetite na lokaciji.",
         contactPhone: "<b>Mobitel:</b> 0955754751",
-        contactEmail: "<b>Email:</b> adriastay@gmail.com",
+        contactEmail: "<b>Email:</b> adriastay7@gmail.com",
         contactLocation: "<b>Lokacija:</b> Ulica Kralja Zvonimira 18, Šibenik",
         footerText: "Copyright © 2026 AdriaStay"
       },
@@ -453,7 +453,7 @@ function toggleFlags() {
         contactTitle: "<b>Contact</b",
         contactText: "For any inquiries, contact us via phone, email, or visit our location.",
         contactPhone: "<b>Phone:</b> +385 95 575 4751",
-        contactEmail: "<b>Email:</b> adriastay@gmail.com",
+        contactEmail: "<b>Email:</b> adriastay7@gmail.com",
         contactLocation: "<b>Location:</b> Ulica Kralja Zvonimira 18, Šibenik",
         footerText: "Copyright © 2026 AdriaStay"
       },
@@ -483,7 +483,7 @@ function toggleFlags() {
         contactTitle: "<b>Kontakt</b>",
         contactText: "Für Fragen kontaktieren Sie uns per Telefon, E-Mail oder besuchen Sie uns vor Ort.",
         contactPhone: "<b>Telefon:</b> +385 95 575 4751",
-        contactEmail: "<b>E-Mail:</b> adriastay@gmail.com",
+        contactEmail: "<b>E-Mail:</b> adriastay7@gmail.com",
         contactLocation: "<b>Standort:</b> Ulica Kralja Zvonimira 8, Šibenik",
         footerText: "Copyright © 2026 AdriaStay"
       }
