--- a/index.html
+++ b/index.html
@@ -175,8 +175,7 @@
           </a>
    <div class="map-container">
   <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2882.775168787329!2d15.889619076016528!3d43.73599727109827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13352f58c3338767%3A0x196dc1cce35af732!2sUl.%20Kralja%20Zvonimira%2018%2C%2022000%2C%20%C5%A0ibenik!5e0!3m2!1shr!2shr!4v1770452186318!5m2!1shr!2shr"
-    loading="lazy"
+    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11531.111176678662!2d15.886700836152892!3d43.73594273641384!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13352f58c3338767%3A0x196dc1cce35af732!2sUl.%20Kralja%20Zvonimira%2018%2C%2022000%2C%20%C5%A0ibenik!5e0!3m2!1shr!2shr!4v1770459166592!5m2!1shr!2shr"
     allowfullscreen
     referrerpolicy="no-referrer-when-downgrade">
   </iframe>
