--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="text-center tm-hero-text-container">
       <div class="tm-hero-text-container-inner">
         <h2 class="tm-hero-title" id="heroTitle">AdriaStay agencija</h2>
-        <p class="tm-hero-subtitle" id="heroSubtitle">Gdje elegancija susreće gostoprimstvo.</p>
+        <p class="tm-hero-subtitle" id="heroSubtitle">Vođenje apartmana u Šibeniku i okolici </br>(Brodarica, Žaborić, Primošten, Srima, Vodice...) </p>
       </div>
     </div>
   </section>
@@ -95,8 +95,17 @@
       <p id="aboutText4">Brinemo se za sve – <b>od komunikacije s gostima, check-ina, check-outa i čišćenja, do
           oglašavanja i optimizacije cijena.</b></p>
       <p id="aboutText5">Vi uživate u prihodima, mi se brinemo za ostalo.</p>
+   </br>  <b> 🔹 CIJENE I NAPLATA </b>
+    </br>Kako funkcionira naplata?
+      </br>Vođenje apartmana naplaćujemo postotkom od ostvarenih rezervacija.
+      </br><b>• Postotak za vođenje apartmana: 👉 15 % </b>
+      </br> <b>• Čišćenje(opcionalno): 👉 po dogovoru, ovisno o veličini apartmana</b>
 
-      <div class="row tm-content-box">
+ <p></br><b>📌 Važno:</b>
+  </br>Provizije Booking.com i Airbnb platformi nisu uključene u našu naknadu i plaćaju se direktno platformama, ne nama.
+
+ </br>Bez fiksnih mjesečnih troškova.
+      </br></br><div class="row tm-content-box">
         <div class="col-lg-1">
           <i class="far fa-3x fa-chart-bar text-center tm-icon"></i>
         </div>
@@ -130,6 +139,7 @@
           <h2 class="tm-text-primary mb-4" id="service4Title">Komunikacija s gostima</h2>
           <p class="mb-4 tm-intro-text" id="service4Text">Brza, ljubazna i višestranična podrška – prije, tijekom i
             nakon boravka.</p>
+            
         </div>
       </div>
 
@@ -141,9 +151,10 @@
           <h2 class="tm-text-primary mb-4" id="service5Title">Fotografiranje i brendiranje smještaja</h2>
           <p class="mb-4 tm-intro-text" id="service5Text">Vizualna prezentacija koja prodaje – jer prvi dojam je
             najvažniji.</p>
-        </div>
+</div>
       </div>
     </div>
+   
   </section>
 
   <!-- Contact -->
@@ -402,7 +413,7 @@ function toggleFlags() {
         navAbout: "O nama",
         navContact: "Kontakt",
         heroTitle: "AdriaStay agencija",
-        heroSubtitle: "Gdje elegancija susreće gostoprimstvo.",
+        heroSubtitle: "<b>Vođenje apartmana</b> u <b>Šibeniku</b> i okolici</br>(Brodarica, Žaborić, Primošten, Srima, Vodice...)",
         aboutTitle: "O nama",
         aboutText1: "<b>AdriaStay</b> je agencija specijalizirana za profesionalno vođenje apartmana i luksuznih smještajnih jedinica u <b>Šibeniku i okolici.</b>",
         aboutText2: "<b>Naša misija je jednostavna</b> – pružiti vrhunsku uslugu vlasnicima nekretnina i besprijekorno iskustvo svakom gostu.",
@@ -432,7 +443,7 @@ function toggleFlags() {
         navAbout: "About us",
         navContact: "Contact",
         heroTitle: "AdriaStay Agency",
-        heroSubtitle: "Where elegance meets hospitality.",
+        heroSubtitle: "Apartment management in Šibenik and the surrounding area.</br>(Brodarica, Žaborić, Primošten, Srima, Vodice...)",
         aboutTitle: "About us",
         aboutText1: "<b>AdriaStay</b> is an agency specialized in professional management of apartments and luxury accommodations in <b>Šibenik and the surrounding area.</b>",
         aboutText2: "<b>Our mission is simple </b>– to provide top-quality service to property owners and a flawless experience for every guest.",
@@ -462,7 +473,7 @@ function toggleFlags() {
         navAbout: "Über uns",
         navContact: "Kontakt",
         heroTitle: "AdriaStay Agentur",
-        heroSubtitle: "Wo Eleganz auf Gastfreundschaft trifft.",
+        heroSubtitle: "Apartmentverwaltung in Šibenik und Umgebung </br>(Brodarica, Žaborić, Primošten, Srima, Vodice...)",
         aboutTitle: "Über uns",
         aboutText1: "<b>AdriaStay</b> ist eine Agentur, die sich auf das professionelle Management von Apartments und Luxusunterkünften in <b>Šibenik und Umgebung spezialisiert hat.</b",
         aboutText2: "<b>Unsere Mission ist einfach </b>– erstklassigen Service für Immobilieneigentümer und ein makelloses Erlebnis für jeden Gast zu bieten.",
